--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "typescript": "~4.7.0"
   },
   "dependencies": {
-    "fs": "^0.0.1-security"
+    "fs": "^0.0.1-security",
+    "ts-node": "^10.9.1"
   }
 }
