--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,9 @@
   "extends": "./node_modules/gts/tsconfig-google.json",
   "compilerOptions": {
     "rootDir": ".",
-    "outDir": "build"
+    "outDir": "build",
+    "target": "ES2022",
+    "lib": ["ES2022"]
   },
   "include": ["src/**/*.ts", "test/**/*.ts"]
 }
